mis à jour EM_algorithm.ipynb

--- a/EM_algorithm.ipynb
+++ b/EM_algorithm.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc4dea45",
+   "id": "b6b02fb4",
    "metadata": {},
    "source": [
     "## The EM Algorithm for a gaussian mixture model with two components\n",
@@ -164,7 +164,7 @@
     "\n",
     "$$  \\hat{\\gamma}_i = \\frac{\\hat{p} \\hat{f}_2(y_i)}{\\hat{p} \\hat{f}_2(y_i) + (1-\\hat{p})\\hat{f}_1(y_i)} \\text{ for all } i \\in [1, N]$$\n",
     "\n",
-    "3. Maximization step : compute the w"
+    "3. Maximization step : compute the weighted means and variance "
    ]
   },
   {
